# git-history-manipulation

./: .gitignore  README.md  TERMINAL-CONFIG.md  commandes_git.md  exercice1_1.py  exercice1_2.py  exercice1_3.py  exercice1_4.py  exercice1_5.py  exercice1_6.py  exercice2_1.py  exercice2_2.py  exercice2_3.py  exercice2_4.py  exercices.md  pyproject.toml
.github/workflows/: tests.yml
exercices/: exercice1_1.py  exercice1_2.py  exercice1_3.py  exercice1_4.py  exercice1_5.py  exercice1_6.py  exercice2_1.py  exercice2_2.py  exercice2_3.py  exercice2_4.py  exercice2_5.py  exercices.md
src/: __init__.py  calculator.py
tests/: test_calculator.py
