[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-history-manipulation"
version = "0.1.0"
description = "A repository to learn Git history manipulation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jyhess"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]
